--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>FizzBuzz</title>
-</head>
+	<head>
+		<title>FizzBuzz</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	</head>
 <body>
 
+	<ul id="lista">
+		
+	</ul> 
+
 <script type="text/javascript" src="js/app.js"></script>
+
 </body>
 </html>
